<resources>
    <string name="app_name">ЯРЕШУ</string>
    <string name="navigation_drawer_open">opened</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="my_profile">Мой профиль</string>
    <string name="order_list">Мои заказы</string>
    <string name="help">Помощь</string>
    <string name="exit">Выход</string>
    <string name="firstName">firstName</string>
    <string name="secondName">secondName</string>
    <string name="chat">Чат</string>
    <string name="exit_title">Выход</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login_name">Имя пользователя</string>
    <string name="create_account">Зарегистрироваться</string>
    <string name="existing_login">Уже с нами? Войдите</string>
    <string name="common_info">Общая информация</string>
    <string name="choose_subject">Выберите предмет</string>
    <string name="budget">Бюджет</string>
    <string name="comment">Отличный автор! сделал все быстро и качественно. Был очень внимателен к требованиям и моим пожеланиям. Сделал работу к сроку! Спасибо.</string>
    <string name="Balance">Ваш баланс: 500 руб.</string>
    <string name="add_bid">Сделать ставку</string>
    <string name="Subject">Предмет:</string>
    <string name="job_description">Работа состоит в том, что надо сделать все быстро и качественно.</string>
    <string name="deadLine">Сроки:</string>
    <string name="in_progress">Сейчас\nв работе</string>
    <string name="about">О себе</string>
    <string name="order_budget">Бюджет заказа</string>
    <string name="offers">Предложения</string>
    <string name="deadline">Срок выполнения</string>
    <string name="status">Статус</string>
    <string name="attached_files">Прикрепленные файлы</string>
    <string name="order_lenta">Лента заказов</string>
    <string name="add_order">Добавить заказ</string>

</resources>
