<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_fragment"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_teacher_lenta"
            android:title="@string/order_lenta" />
        <item
            android:id="@+id/nav_order_list_fragment"
            android:title="@string/order_list" />
        <item
            android:id="@+id/nav_help_fragment"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_to_exit"
            android:title="@string/exit_title" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/chat" />
    </group>



</menu>