<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundGrey"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:id="@+id/fragment_add_order_name_layout"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/order_title"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Название работы"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_info"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/Subject"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/order_subject"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="Тип работы:"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/order_type"/>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/deadline"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/order_deadline"/>

                    </LinearLayout>



                </LinearLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Описание работы"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"/>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/order_description"
                    android:text="@string/job_description"/>

            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/current_bids_text_view"
                android:text="Текущие ставки:"/>



            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bids_list"
                android:layout_marginTop="16dp">

            </android.support.v7.widget.RecyclerView>



        </LinearLayout>

    </ScrollView>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/bid_card"
            android:background="@color/tw__composer_white"
            android:layout_alignParentBottom="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/button_add_bid"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textAlignment="center"
                android:id="@+id/bid_amount"
                android:minWidth="18dp"
                android:inputType="number" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add_bid"
                android:textColor="@color/tw__composer_white"
                android:background="@drawable/shape"
                android:textAllCaps="false"
                android:id="@+id/button_add_bid"/>
        </RelativeLayout>



</RelativeLayout>

